Not less than jdk8 ,  The PermSize and MaxPermSize option will be ignore (#4167)